...
    <string name="email_address">Email Adresse</string>
    <string name="optional_user_id">Gib dir einen Nutzernamen (optional)</string>
    <string name="email_example">max.musterman@muster.de</string>
    <string name="password">Passwort</string>
    <string name="user_id">Nutzername</string>
    <string name="recipe_list_recipe_title">Meine Rezepte</string>
    <string name="recipe_list_create_recipe_button">Neues Rezept erstellen</string>
    <string name="edit_recipe_button">bearbeiten</string>
    <string name="delete">löschen</string>
    <string name="admin_title">Lösche oder entmelde Nutzer/Rezepte</string>
    <string name="admin_flagged_recipes">Gemeldete Rezepte</string>
    <string name="flagged_users">Gemeldete Nutzer</string>
    <string name="enter_new_password">Gib dein neues Passwort ein</string>
...
    <string name="password_input">Gib dein Passwort ein</string>
    <string name="search_ingredients">Eier, Lauch, Nudeln, Zucker, ...</string>
    <string name="textView_search_title_text">Gibt den Titel des Rezeptes ein, nach dem du suchen willst:</string>
    <string name="search_ingredients_headline">Gib Zutaten ein, nach denen du suchen willst:</string>
    <string name="editText_hint_search_tags">vegetarisch, Hauptspeise, süß, deftig, ...</string>
    <string name="search_tags_headline">Welche Tags soll das Rezept haben?</string>
    <string name="login">Einloggen</string>
    <string name="login_have_no_account">Ich habe noch keinen Account</string>
    <string name="password_stars">**********</string>
    <string name="open">Öffnen</string>
    <string name="feed">Feed</string>
    <string name="menu">Menü</string>
    <string name="write_sth_about_you_headline">Schreibe etwas über dich</string>
    <string name="i_like_cooking_hint">Ich koche gerne...</string>
    <string name="change_login_data">Login Daten ändern</string>
    <string name="save">Speichern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="savoury__tag">herzhaft</string>
    <string name="sweet_tag">süß</string>
    <string name="salty_tag">salzig</string>
    <string name="publish">veröffentlichen</string>
    <string name="ingredient_input_description">Schreibe jede Zutaten und Kapitel so auf:
...
    <string name="my_profile_title">Mein Profil</string>
    <string name="min">min</string>
    <string name="preptime">Zubereitungszeit:</string>
    <string name="share">Teilen</string>
    <string name="logout">Ausloggen</string>
    <string name="reportRecipe">melden</string>
    <string name="titel">Titel</string>
    <string name="favourites_head_title">Favoriten</string>
    <string name="favourites_header">Favoriten</string>
    <string name="portions_headline">Anzahl Portionen: </string>
    <string name="portion_amount">Portionenanzahl</string>
    <string name="creation_time_headline">Erstellungsdatum:</string>
    <string name="load_more">Mehr laden</string>
...
